--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -4,18 +4,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 :root
 {
-    --foregroundColourLight:  rgba(255, 255, 255, 0.5); 
-    --baackgroundColourLight: rgba(245, 245, 245, 0.95);
+    --mainContainerColourLight:    rgba(255, 255, 255, 0.5); 
+    --contentContainerColourLight: rgba(245, 245, 245, 0.85);
+    --smallBoxBgrColourLight: rgba(210, 210, 210, 0.9);
+    --buttonColourLight: white;
 
-    --foregroundColourDark:  rgba(50, 50, 50, 0.5); 
-    --baackgroundColourDark: rgba(12, 12, 12, 0.95);
+    --mainContainerColourDark:    rgba(50, 50, 50, 0.5); 
+    --contentContainerColourDark: rgba(49, 51, 56, 0.85);
+    --smallBoxBgrColourDark: rgba(0, 0, 0, 0.9);
+    --buttonColourDark: #737884;
 
-    --orange1: #946800;
+    --orangeForLight: #976600;
+    --orangeForDark: #feac00;
 }
 
 a, a:link, a:visited
 {
-    color: var(--orange1);
+    color: var(--orangeForLight);
     text-decoration: none;
 }
 a:hover
@@ -25,14 +30,30 @@ a:hover
 
 body
 {
-    font-family: Ubuntu, Roboto, system-ui ;
-    background-image: url("/assets/images/maps/overworld.jpg");
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    background-color: black;
+    /* background-image: url("/assets/images/maps/overworld.jpg"); */
     background-attachment: fixed;
     background-position: top;
     background-repeat: repeat-y;
     background-size: cover;
 }
 
+h1, .pageTitle
+{
+    font-family: Ubuntu, system-ui, sans-serif;
+}
+h2, .pageSubtitle
+{
+    font-family: Roboto, system-ui, sans-serif;
+    font-weight: 601;
+    font-size: 1.35em;
+}
+h3, .pageSubtitleSmall
+{
+    font-weight: 601;
+    font-size: 1.25em;
+}
 .table-responsive
 {
     margin-top: 10px;
@@ -43,14 +64,15 @@ body
 */
 #mainContainerBackground
 {
-    max-width: 1800px;
-    min-width: 300px;
+    max-width: 1750px;
+    /* min-width: 300px; */
 
-    margin: 20px auto;
-    padding: 10px;
+    margin: 1% auto;
+    padding: 15px;
+    padding-left: 10px;
     
-    background-color: var(--foregroundColourLight);
-    backdrop-filter: blur(10px);
+    background-color: var(--mainContainerColourLight);
+    backdrop-filter: blur(8px);
     columns: black;
 }
 #mainContainerForeground
@@ -74,7 +96,8 @@ body
 }
 #contentContainer
 {
-    background-color: var(--baackgroundColourLight);
+    background-color: var(--contentContainerColourLight);
+    backdrop-filter: blur(24px);
     /* border: 0px blue solid; */
     /* width: 85%;
     float: right; */
@@ -88,7 +111,10 @@ body
     text-align: center;
 }
 
-
+.table-light
+{
+    color: black;
+}
 
 /* 
     Text styles
@@ -102,16 +128,7 @@ body
     font-weight: bold;
     font-size: 1.75em;
 }
-.pageSubtitle
-{
-    font-weight: 601;
-    font-size: 1.35em;
-}
-.pageSubtitleSmall
-{
-    font-weight: 601;
-    font-size: 1.25em;
-}
+
 .codeBlock
 {
     background-color: lightgray;
