--- a/assets/styles/layouts/article.css
+++ b/assets/styles/layouts/article.css
@@ -29,10 +29,11 @@
 }
 .articleGalleryImage
 {
-    width: auto;
+    width: 100%;
     height: auto; 
     max-height: 200px; 
-    padding-bottom: 10px
+    padding-bottom: 10px;
+    object-fit: contain;
 }
 .articleImageTitle
 {
@@ -55,4 +56,39 @@
 .tableImage50px
 {
     max-height: 50px;
+}
+
+.galleryGrid
+{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    max-width: 1300px;
+    margin: 0px auto;
+    justify-content: center;
+    text-align: center;
+    font-weight: bold;
+    font-size: large;
+    background-color: lightgrey;
+    border: 0px red solid;
+    border-radius: 5px;
+    padding: 15px;
+    box-shadow: 0px 0px 8px rgba(0,0,0,0.5);
+}
+.galleryImage
+{
+    max-height: 180px;
+    max-width: 320px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+    aspect-ratio: 16/9;
+}
+
+.tableIcon
+{   
+    max-width: 50px;
+    width: 100%;
 }
