--- a/assets/styles/layouts/listSmall.css
+++ b/assets/styles/layouts/listSmall.css
@@ -15,13 +15,14 @@
 {
     border: 0px black dotted;
 	background-color: lightgray;
-	border-radius: 5px;
+	border-radius: 10px;
 
 	height: 100%;
 	padding: 10px;
 
 	font-weight: bold;
 	font-size: 1.1em;
+	box-shadow: 2px 2px 8px rgba(0,0,0,0.4);
 }
 .listSmallDivContent
 {
@@ -29,6 +30,10 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);  
+}
+.listSmallDivContent:link, .listSmallDivContent:visited
+{
+	color: white;
 }
 .listSmallIcon
 {
