--- a/assets/styles/navigation.css
+++ b/assets/styles/navigation.css
@@ -22,7 +22,7 @@
 }
 .navItem:hover
 {
-    color: var(--orange1);
+    color: var(--orangeForLight);
     text-decoration:underline;
 }
 .linkHide, .linkHide:link, .linkHide:hover, .linkHide:visited
@@ -30,4 +30,9 @@
     color: black;
     cursor: default;
     text-decoration: none;
+}
+
+#miscHomeLink
+{
+    display: none;
 }
