--- a/assets/styles/pages/homepage.css
+++ b/assets/styles/pages/homepage.css
@@ -17,10 +17,11 @@ Items grid
 {
     padding: 10px;
     border-radius: 5px;
-    background-color: lightgray;
+    background-color: var(--smallBoxBgrColourLight);
     box-shadow: 0px 0px 6px rgba(0,0,0,0.5);
     text-align: center;
     max-height: 400px;
+	overflow: auto;
 }
 
 /* 
@@ -28,7 +29,7 @@ Items grid
 */
 .suggestedPageItemContainer
 {
-	background-color: hsl(0, 0%, 95%);
+	background-color: var(--buttonColourLight);
 	/* border: 1px black dotted; */
 	box-shadow: 1px 1px 2px black;
 	color: black;
@@ -40,15 +41,20 @@ Items grid
 	font-size: 1.15rem;
 }
 
+#discordserverContainer
+{
+	display: flex;
+	align-items: center;
+}
 #trailerVideo
 {
 	width: 100%;
     border-radius: 5px;
 }
-#updatedContainer
+/* #updatedContainer
 {
 	overflow: scroll;
-}
+} */
 #updatesDiv, #eventsDiv
 {
 	text-align: left;
@@ -136,7 +142,6 @@ Items grid
 	background-color: #2c2d30;
 	
 	padding: 10px;
-
 	height: auto;
 
 	align-items: center;
@@ -148,7 +153,7 @@ Items grid
 
 	border: 0px white solid;
 	box-shadow: 0px 0px 8px rgba(0,0,0,0.5);
-	margin-top: 30px;
+	/* margin-top: 30px; */
 }
 #discordBoxTitleDiv
 {
